<resources>
    <string name="app_name">Manava Hakku Rakshane</string>
    <!-- to toggle the open close button of the navigation drawer -->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">slide show</string>
    <string name="menu_FAQ">FAQ\'s</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_feedback">Feedback</string>
    <string name="manava_hakku_rakshane">Manava Hakku Rakshane</string>
    <string name="karnataka_state_human_rights_commission">Karnataka State Human Rights Commission</string>
    <string name="log_in">Log-in</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="login">login</string>
    <string name="file_new_complaint">File New \nComplaint</string>
    <string name="view_complaints">View\n complaints</string>
    <string name="order_in_my_complaint">Order in my \n Complaint</string>
    <string name="our_rights">Our Rights</string>
    <string name="published_orders">Published \n Orders</string>
    <string name="about_kshrc">About KSHRC</string>
    <string name="nhrc_website">NHRC WEBSITE</string>
    <string name="kshrc_website">KSHRC WEBSITE</string>
    <string name="contact">Contact</string>
    <string name="faq_s">FAQ’s</string>
    <string name="home">Home</string>
    <string name="i_have_read_and_understood_the_above_details">I have read and understood the above details.</string>
    <string name="submit">submit</string>
    <string name="commission">Commission -</string>
    <string name="complainants_mobile_number">Complainants Mobile number -</string>
    <string name="enter_your_full_name">Enter your Full Name</string>
    <string name="father_mother_name">Father/ Mother Name</string>
    <string name="aadhar_number">Aadhar Number</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="qualification">Qualification</string>
    <string name="occupation">occupation</string>
    <string name="email_id_of_person">Email ID of Person</string>
    <string name="enter_your_complete_address">Enter your Complete Address</string>
    <string name="city">City</string>
    <string name="pin_code">Pin Code</string>
    <string name="state">State</string>
    <string name="district">District</string>
    <string name="taluk">Taluk</string>
    <string name="next">next</string>
    <string name="shrc_karnataka">SHRC, KARNATAKA</string>
    <string name="disability_if_any">Disability (if any)</string>
    <string name="category">Category</string>
    <string name="victim_details">Victim Details</string>
    <string name="incident_details">Incident Details</string>
    <string name="incident_place">Incident Place</string>
    <string name="incident_data_period">Incident Data/ Period</string>
    <string name="facts_in_brief_of_the_complaint">Facts in brief of the complaint</string>
    <string name="email_address_of_the_person_authority_against_whom_complaints_is_made">Email address of the Person / Authority against whom complaints is made</string>
    <string name="which_public_servant_authority_is_alleged_to_have_failed_to_protect_enforce_human_rights">Which Public servant/Authority is alleged to have failed to protect/ enforce human rights?</string>
    <string name="allegation_made_against_public_servant_authority_of_which_department">Allegation made against public servant / Authority of which department</string>
    <string name="who_s_is_alleged_to_have_violated_human_rights">Who’s is alleged to have violated Human Rights?</string>
    <string name="whether_any_other_case_or_complaint_pending_before_the_court_other_authority_or_this_other_commission_if_any_in_relation_to_the_subject_matter_of_this_complaint">Whether, any other case or complaint pending before the court, other authority or this/other Commission, if any, in relation to the subject matter of this complaint</string>
    <string name="case_complaint_number">Case/Complaint Number</string>
    <string name="dated">Dated</string>
    <string name="pending_before">Pending Before</string>
    <string name="submit_incident_related_documents_below_if_any">Submit incident related documents below (if any)</string>
    <string name="selfie">Selfie</string>
    <string name="photo_n_less_then_n_1mb">Photo \n (less then \n 1mb)</string>
    <string name="video_n_less_then_n_10mb">Video \n (less-then\n 10mb)</string>
    <string name="document">Document</string>
    <string name="capture_the_e_sign">Capture the e-sign</string>
    <string name="cancel">CANCEL</string>
    <string name="hrc_number">HRC Number</string>
    <string name="complaint_date">Complaint date</string>
    <string name="complainant_name">Complainant name</string>
    <string name="victim_name">Victim name</string>
    <string name="view_details">VIEW DETAILS</string>
    <string name="order_date">Order Date</string>
    <string name="complainant_mobile_number">Complainant Mobile number :</string>
    <string name="father_mother_s_name">Father/Mother’s Name</string>
    <string name="full_name">Full Name</string>
    <string name="address">Address</string>
    <string name="disability">Disability</string>
    <string name="commission_shrc_karnataka">Commission SHRC, Karnataka</string>
    <string name="captured_selfie_photo">Captured Selfie Photo</string>
    <string name="attach_photo_if_any_about_the_incident">Attach photo if any, about the incident</string>
    <string name="attach_video_if_any_about_the_incident">Attach Video if any, about the incident</string>
    <string name="detailed_complaint_documents_if_any_related_to_the_incident">Detailed complaint /Documents , if any related to the incident</string>
    <string name="signature_of_the_complaint_register">Signature of the Complaint register</string>
    <string name="dashboard">Dashboard</string>

    <string-array name="gender">
        <item>Select Gender</item>
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>

    <string-array name="qualification">
        <item>Select Qualification</item>
        <item>S.S.L.C</item>
        <item>PU/Diploma</item>
        <item>Graduate</item>
        <item>Post Graduate</item>
        <item>Doctorate</item>
    </string-array>

    <string-array name="occupation">
        <item>Select Occupation</item>
        <item>Home-Maker</item>
        <item>Student</item>
        <item>Agriculture</item>
        <item>Government Employee</item>
        <item>Professional Employee</item>
        <item>Private Employee</item>
        <item>Self Employee</item>
        <item>Labour</item>
        <item>Others</item>
    </string-array>

    <string-array name="category">
        <item>Select category</item>
        <item>SC</item>
        <item>ST</item>
        <item>OBC</item>
        <item>Minority</item>
        <item>Other</item>
    </string-array>

    <string-array name="disability">
        <item>No</item>
        <item>Yes</item>
    </string-array>

</resources>