<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".complaint_detail">

    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:background="#D7C5E4"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/commission"
                android:textColor="#000000"
                android:paddingHorizontal="5dp"
                android:textSize="14sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/complainants_mobile_number"
                android:textColor="#000000"
                android:paddingHorizontal="5dp"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/shrc_karnataka"
                android:textColor="#000000"
                android:paddingHorizontal="5dp"
                android:textSize="14sp"
                android:textStyle="normal" />
            <TextView
                android:id="@+id/complaint_No"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="99XXXXXXXX"
                android:textColor="#000000"
                android:paddingHorizontal="5dp"
                android:textSize="14sp"
                android:textStyle="normal" />
        </LinearLayout>
    </LinearLayout>

    <!-- ..........body........  -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/enter_your_full_name"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/blank_sqr_edit_text_board"
                android:inputType="text"
                android:padding="6dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/father_mother_name"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/parents_name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/blank_sqr_edit_text_board"
                android:inputType="text"
                android:padding="6dp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/aadhar_number"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/aadhar_no"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/blank_sqr_edit_text_board"
                android:inputType="number"
                android:maxLength="12"
                android:padding="6dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="167dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/gender"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="156dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/age"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="normal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <Spinner style="@style/SpinnerTheme"
                    android:id="@+id/gender"
                    android:layout_width="155dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:entries="@array/gender"
                    android:layout_marginTop="4dp"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/age"
                    android:layout_width="158dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/blank_sqr_edit_text_board"
                    android:ems="10"
                    android:layout_marginTop="4dp"
                    android:inputType="number"
                    android:maxLength="3"
                    android:padding="10dp"
                    android:textColor="#000000"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/qualification"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="normal" />


            <Spinner style="@style/SpinnerTheme"
                android:id="@+id/qualification"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ems="10"
                android:entries="@array/qualification"
                android:layout_marginTop="4dp"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/occupation"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="normal" />

            <Spinner style="@style/SpinnerTheme"
                android:id="@+id/occupation"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ems="10"
                android:entries="@array/occupation"
                android:layout_marginTop="4dp"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/email_id_of_person"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/c_email"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/blank_sqr_edit_text_board"
                android:inputType="textEmailAddress"
                android:padding="6dp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/enter_your_complete_address"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="normal" />


            <EditText
                android:id="@+id/c_address"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/blank_sqr_edit_text_board"
                android:inputType="textMultiLine"
                android:padding="6dp" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/city"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="normal" />


            <EditText
                android:id="@+id/c_city"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/blank_sqr_edit_text_board"
                android:inputType="textMultiLine"
                android:padding="6dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="167dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/pin_code"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="154dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/state"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="normal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/c_pincode"
                    android:layout_width="160dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/blank_sqr_edit_text_board"
                    android:ems="10"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <Spinner style="@style/SpinnerTheme"
                    android:id="@+id/c_state"
                    android:layout_width="160dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@+id/c_district"
                    android:layout_weight="1"
                    android:ems="10"
                    android:entries="@array/gender"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textColor="#000000"
                    android:textSize="16sp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="167dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/district"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="154dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/taluk"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="normal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">


                <Spinner style="@style/SpinnerTheme"
                    android:id="@+id/c_district"
                    android:layout_width="160dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="4dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:entries="@array/gender"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <Spinner style="@style/SpinnerTheme"
                    android:id="@+id/c_taluk"
                    android:layout_width="160dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@+id/c_district"
                    android:layout_weight="1"
                    android:ems="10"
                    android:entries="@array/gender"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textColor="#000000"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnLogin"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_marginVertical="20dp"
                    android:background="@drawable/btn_round"
                    android:text="@string/next"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>