<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="10dp"
    app:cardElevation="10dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:background="#D9D9D9"
        android:orientation="vertical"
        android:padding="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="10dp"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:weightSum="3">


                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_weight="1"
                    android:text="@string/hrc_number"
                    android:textAlignment="viewStart"
                    android:textColor="#000000"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textView30"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:text="@string/complaint_date"
                    android:textColor="#000000"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_weight="1"
                    android:text="@string/complainant_name"
                    android:textColor="#000000"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_weight="1"
                    android:text="@string/victim_name"
                    android:textColor="#000000"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_weight="1"
                    android:text="@string/incident_place"
                    android:textColor="#000000"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:weightSum="3">

                <TextView
                    android:id="@+id/hrsno"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:text="TEST/XX/XX/XXXX"
                    android:textColor="@color/black"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/c_date"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:text="16/XX/XXX" />

                <TextView
                    android:id="@+id/c_name"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:textColor="@color/black"
                    android:text="Test"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/v_name"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:textColor="@color/black"
                    android:text="Test"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/i_place"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:textColor="@color/black"
                    android:text="Bangalore"
                    android:textSize="14sp" />

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right"
            android:padding="10dp"
            android:layout_marginHorizontal="10dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnview"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:padding="5dp"
                android:background="@drawable/btn_view_round"
                android:text="@string/view_details"
                android:textColor="#C9EB40"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>